# Tetris_ML

./: .gitignore  README.md  best_zenx.coef
Cmake_Zenix/: Benchmark.txt  CMakeLists.txt  CMakeSettings.json  Cmake_Zenix.cpp  Cmake_Zenix.h  linecount.ps1
Cmake_Zenix/CMakeModules/: CopyCLSource.cmake
Cmake_Zenix/python_helpers/: vs_game_field_vis.py  vs_game_field_vis_inst.py
Cmake_Zenix/python_helpers/errors/: before_weird_stuff_happen.txt  collider_mem.txt  n_burned2.txt  weird_character_in_gamefield.txt
Cmake_Zenix/src/: .clang-format  CMakeLists.txt  linecount.ps1
Cmake_Zenix/src/NEAT/: CMakeLists.txt  genotype.cpp  genotype.hpp  genotype.ipp  innovation.cpp  innovation.hpp  innovation_database.cpp  innovation_database.hpp  mutation.cpp  mutation.hpp  mutation.ipp  neat.cpp  neat.hpp  neural_info.hpp  organism.cpp  organism.hpp  phenotype.hpp  population.cpp  population.hpp  population.ipp
Cmake_Zenix/src/NEAT/tests/: CMakeLists.txt  neat_test.cpp
Cmake_Zenix/src/NEAT_procedural/: CMakeLists.txt
Cmake_Zenix/src/common/: CMakeLists.txt  assertion.hpp  bi_map.cpp  bi_map.hpp  bi_map.ipp  common.hpp  file_managing.hpp  game_clock.cpp  game_clock.h  keyboard_input.cpp  keyboard_input.h  keyboard_input.ipp  keyboard_test.cpp  path_consts.hpp  rng.cpp  rng.h  string_manip.cpp  string_manip.h  zmath.cpp  zmath.h
Cmake_Zenix/src/common/data_structs/: neural_node.h
Cmake_Zenix/src/common/tests/: CMakeLists.txt  bi_map_test.cpp  preprocessor_path_join_test.cpp  sandbox.cpp  string_manip_test.cpp  zmath_test.cpp
Cmake_Zenix/src/initial_tests/: CMakeLists.txt  processor_count.cc
Cmake_Zenix/src/neural_network_core/: CMakeLists.txt  artfl_neural_network.cpp  artfl_neural_network.hpp  artfl_neural_network.ipp  bucket_swap_sort.py  counting_sort.py  neural_graph.cpp  neural_graph.hpp  neural_graph.ipp  neural_network_core.cpp  neural_network_core.hpp  neuron_type.hpp  x_bucket_swap_sort.py
Cmake_Zenix/src/neural_network_core/tests/: CMakeLists.txt  neural_network_test.cpp  open_cl_compute_test.hpp  volatile_neural_graph.hpp
Cmake_Zenix/src/renderer/: CMakeLists.txt  game_renderer.cpp  game_renderer.h  renderer.cpp  renderer_specs.h
Cmake_Zenix/src/replay/: CMakeLists.txt  serialize_format.cpp  serialize_format.h
Cmake_Zenix/src/replay/tests/: CMakeLists.txt  serialize_format_test.cpp
Cmake_Zenix/src/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
Cmake_Zenix/src/tetris/: CMakeLists.txt  game_input.cpp  game_input.h  game_input.ipp  game_module.cpp  game_module.h  game_specs.h  tetris_pieces.cpp  tetris_pieces.h
Cmake_Zenix/src/tetris/tests/: CMakeLists.txt  input_serialize_test.cpp
Cmake_Zenix/src/tetris_api/: CMakeLists.txt  ml_interface.h  tetris_api.h  tetris_api_renderer.cpp  tetris_api_renderer.h  tetris_core.cpp  tetris_core.h  tetris_extended_engine.cpp  tetris_extended_engine.h
Cmake_Zenix/src/tetris_api/tests/: CMakeLists.txt  input_collect_test.cpp
Cmake_Zenix/src/tetris_game/: CMakeLists.txt  tetris_game.cpp  tetris_game.h  tetris_game.ipp
Cmake_Zenix/src/tetris_ml/: CMakeLists.txt  tetris_game_test.cpp  tetris_ml.cpp
Cmake_Zenix/src/verbosity/: CMakeLists.txt  framerate.cpp  framerate.h  verbosity_core.cpp  verbosity_core.h  verbosity_core.ipp
Cmake_Zenix/src/video_core/: CMakeLists.txt  tester.cpp  video_core.cpp  video_core.h
Core/: BodyType.cpp  BodyType.h  Core.sln  Core.vcxitems  Core.vcxitems.filters  core_timing.cpp  core_timing.h  correct_tetris_body.cpp  correct_tetris_body.h  game_core.cpp  game_core.h  game_rng.cpp  game_rng.h  input_interface.cpp  input_interface.h  lite_api.cpp  lite_api.h  lite_module.cpp  lite_module.h  lite_renderer.cpp  lite_renderer.h  lite_tetris_body.cpp  lite_tetris_body.h  lite_tetris_field.cpp  lite_tetris_field.h  renderer.cpp  renderer.h  rounding.cpp  rounding.h  tetris_body.cpp  tetris_body.h  tetris_physics.cpp  tetris_physics.h  tetris_piece.cpp  tetris_piece.h  vector2d.h
DebugConsole/: DebugConsole.cpp  DebugConsole.vcxproj  DebugConsole.vcxproj.filters  keyboard_input.cpp  keyboard_input.h  lite_renderer.cpp  lite_renderer.h  renderer.cpp  renderer.h  smart_keyboard_input.cpp  smart_keyboard_input.h  w_renderer.cpp  w_renderer.h
DebugConsole/DEBUG_TIMEBASED/: vc142.idb
DebugConsole/DEBUG_TIMEBASED/DebugConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DebugConsole.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DebugConsole/RELEASE_MULTITHREAD/DebugConsole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DebugConsole.lastbuildstate  DebugConsole.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Lite_Core/: Lite_Core.vcxitems  Lite_Core.vcxitems.filters  rng.h
MLLibrary/: MLLibrary.vcxitems  MLLibrary.vcxitems.filters  Zenoy.cpp  Zenoy.h  Zenoy_agent.cpp  Zenoy_agent.h  Zenoy_coefficients.cpp  Zenoy_coefficients.h  Zenoy_config.cpp  Zenoy_config.h  Zenxis_Multithread.cpp  Zenxis_Multithread.h  Zeny.cpp  Zeny.h  zmath.h
WindowsRenderer/: WindowsRenderer.cpp  WindowsRenderer.sln  WindowsRenderer.vcxproj  WindowsRenderer.vcxproj.filters
ZenixConsole/: ExZenxis.cpp  ExZenxis.h  ZConsole.cpp  ZConsole.h  ZenixConsole.vcxitems  cross_inputing.cpp  cross_inputing.h  mkdir.h
ZenixLinux/: ZenixLinux.vcxproj  main.cpp
ZenixWin/: ZenixWin.cpp  ZenixWin.vcxproj  ZenixWin.vcxproj.filters
Zenix_ML/: Zenix_ML.cpp  Zenix_ML.sln  Zenix_ML.vcxproj  Zenix_ML.vcxproj.filters  Zenx.cpp  Zenx.h  Zenx_Consts.h  Zenxis.cpp  Zenxis.h  game_helper.cpp  game_helper.h  zenxis_experiment.txt
Zenix_ML/RELEASE_MULTITHREAD/Zenix_ML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Zenix_ML.lastbuildstate  Zenix_ML.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
ZenoyArchitecture/: ZenoyArchitecture.vcxitems
ZenxPlayer/: ZenxPlayer.cpp  ZenxPlayer.h  ZenxPlayer.vcxproj  ZenxPlayer.vcxproj.filters
