# CMakeList.txt : CMake project for Cmake_Zenix, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project (Cmake_Zenix)

# Add source to this project's executable.
add_executable (Cmake_Zenix "Cmake_Zenix.cpp" "Cmake_Zenix.h")

# TODO: Add tests and install targets if needed.
